--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 
   "dependencies": {
     "hubot": "2.3.2",
+    "hubot-hipchat": "~>1.1",
     "hubot-scripts": ">= 2.1.0",
     "optparse": "1.0.3"
   },
