--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name":        "hosted-hubot",
-  "version":     "2.3.2",
-  "author":      "GitHub Inc.",
-  "keywords":    "github hubot campfire bot",
+  "name": "hosted-hubot",
+  "version": "2.3.2",
+  "author": "GitHub Inc.",
+  "keywords": "github hubot campfire bot",
   "description": "A simple helpful Robot for your Company",
-  "licenses":     [{
-    "type":       "MIT",
-    "url":        "http://github.com/github/hubot/raw/master/LICENSE"
-  }],
-
-  "repository" : {
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://github.com/github/hubot/raw/master/LICENSE"
+    }
+  ],
+  "repository": {
     "type": "git",
-    "url":  "https://github.com/github/hubot.git"
+    "url": "https://github.com/github/hubot.git"
   },
-
   "dependencies": {
     "hubot": "2.3.2",
     "hubot-hipchat": ">= 1.1.2",
@@ -21,12 +21,16 @@
     "sandbox": "0.8.3",
     "xml2js": "0.1.14",
     "jsdom": "0.2.14",
-    "optparse": "1.0.3"
+    "optparse": "1.0.3",
+    "underscore": "~1.4.2",
+    "htmlparser": "1.7.6",
+    "soupselect": "0.2.0"
+    "underscore": "1.3.3",
+    "underscore.string": "2.1.1",
+    "githubot": "0.2.0"
   },
-
   "engines": {
     "node": "0.6.x",
     "npm": "1.0.x"
   }
 }
-
