--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsdom": "0.2.14",
     "optparse": "1.0.3",
     "underscore": "~1.4.2",
+    "cheerio": "0.7.0",
     "htmlparser": "1.7.6",
     "soupselect": "0.2.0"
     "underscore": "1.3.3",
