--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "underscore": "~1.4.2",
     "cheerio": "0.7.0",
     "htmlparser": "1.7.6",
-    "soupselect": "0.2.0"
+    "soupselect": "0.2.0",
     "underscore": "1.3.3",
     "underscore.string": "2.1.1",
     "githubot": "0.2.0"
